provarAnt/00D1b0000000d5bEAA/objects/SalesIQ__Request__c.object
<CustomObject>
    <fields>
        <fullName>SalesIQ__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Approval_Count__c</fullName>
        <description>Number of Approvals required.</description>
        <inlineHelpText>Number of Approvals required.</inlineHelpText>
        <label>Approval Count</label>
        <summaryForeignKey>SalesIQ__ApprovalLineItem__c.SalesIQ__Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved/Rejected By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Count_Roster_Request__c</fullName>
        <label>Count Roster Request</label>
        <summaryForeignKey>SalesIQ__Roster_Request__c.SalesIQ__Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Home_Office_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Home Office Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Order_Of_Execution__c</fullName>
        <formula>CASE( SalesIQ__Request_Type__c, 
&quot;Territory Creation&quot;, 1, 
&quot;Create &amp; Assign&quot;, 2, 
&quot;PS Territory Creation&quot;, 3, 
&quot;Move AC Territory&quot;, 4, 
&quot;Account Movement&quot;, 5, 
&quot;Assign AC&quot;, 6, 
&quot;UnAssign AC&quot;, 7, 
&quot;Assign UnAssign AC&quot;, 8, 
&quot;UnAssign and Assign AC&quot;, 9, 
&quot;Assign PS&quot;, 10, 
&quot;UnAssign PS&quot;, 11, 
&quot;Assign UnAssign PS&quot;, 12, 
&quot;UnAssign and Assign PS&quot;, 13, 
14)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Of Execution</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Partially_Excecuted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partially Excecuted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Request_Type__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lot Size Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory Creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory Deletion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assign AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UnAssign AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assign UnAssign AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UnAssign and Assign AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create &amp; Assign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Movement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory Name Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PS Territory Name Change</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Status_Flag_Sum__c</fullName>
        <description>Sum of Status Flag</description>
        <label>Status Flag Sum</label>
        <summarizedField>SalesIQ__ApprovalLineItem__c.SalesIQ__Status_Flag__c</summarizedField>
        <summaryForeignKey>SalesIQ__ApprovalLineItem__c.SalesIQ__Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SalesIQ__Team__c</fullName>
        <label>Team</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesIQ__extId__c</fullName>
        <externalId>true</externalId>
        <label>extId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesIQ__ext__c</fullName>
        <externalId>true</externalId>
        <label>ext</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SalesIQ__orderByStatus__c</fullName>
        <formula>IF(Text(SalesIQ__Status__c)==&apos;Pending&apos;, 1, if(Text(SalesIQ__Status__c)==&apos;Approved&apos;,2,if(Text(SalesIQ__Status__c)==&apos;Rejected&apos;,3,if(Text(SalesIQ__Status__c)==&apos;Completed&apos;,4,6))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>orderByStatus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Request</label>
    <listViews>
        <fullName>SalesIQ__All</fullName>
        <columns>NAME</columns>
        <columns>SalesIQ__Status__c</columns>
        <columns>SalesIQ__Request_Type__c</columns>
        <columns>SalesIQ__ext__c</columns>
        <columns>SalesIQ__extId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{0000000000}</displayFormat>
        <label>Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>